# fhir-datasequence

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: docker-image.yml
env/: ingestion_api
fhir_datasequence/: config.py  main.py
fhir_datasequence/api/: health_records.py
fhir_datasequence/auth/: __init__.py  apple.py  fhir.py  handlers.py  openid.py
fhir_datasequence/metriport/: __init__.py  api.py  client.py  db.py  types.py  utils.py  webhook.py
fhir_datasequence/metriport/auth/: webhook.py
migrations/: env.py
migrations/versions/: 5d3300030073_create_metriport_unhandled_data_table.py  9504e238f60c_add_uid_column_to_records_table.py  b48df1f110f3_add_unique_constaint_to_workouts_table.py  b65a94548db2_create_records_table.py  e537d7dbd899_create_metriport_records_table.py
