[tool.poetry]
name = "fhir-datasequence"
version = "0.1.0"
description = "Data sequence ingestion API"
authors = ["beda.software <info@beda.software>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fhir_datasequence"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.8"}
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
aiohttp-apispec = "^2.2.3"
cryptography = "^39.0.2"
pyjwt = "^2.6.0"
aiohttp-cors = "^0.7.0"
fhirpy = "^1.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = {version = "^23.1.0", allow-prereleases = true}
ruff = "^0.0.280"
autohooks = "^23.7.0"
autohooks-plugin-black = "^23.7.0"
autohooks-plugin-mypy = "^23.3.0"
autohooks-plugin-ruff = "^23.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.mypy", "autohooks.plugins.ruff"]
