[tool.poetry]
name = "fhir-datasequence"
version = "0.1.0"
description = "Data sequence ingestion API"
authors = ["beda.software <info@beda.software>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fhir_datasequence" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"
psycopg = { extras = ["binary", "pool"], version = "^3.1.8" }
sqlalchemy = { version = "^2.0.4", extras = ["asyncio"] }
alembic = "^1.9.4"
aiohttp-apispec = "^2.2.3"
cryptography = "^39.0.2"
pyjwt = "^2.6.0"
aiohttp-cors = "^0.7.0"
fhirpy = "^1.3.1"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = { version = "^23.11.0", allow-prereleases = true }
ruff = "^0.1.6"
autohooks = "^23.10.0"
autohooks-plugin-black = "^23.10.0"
autohooks-plugin-mypy = "^23.10.0"
autohooks-plugin-ruff = "^23.11.0"
types-aiofiles = "^23.2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.mypy",
    "autohooks.plugins.ruff",
]

[[tool.mypy.overrides]]
module = ["fhirpy", "aiohttp_apispec", "aiohttp_cors"]
ignore_missing_imports = true